# paw

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  README.md  paw.py  pyproject.toml  requirements.txt  sample.txt  setup.py  static.py  tests.py
.github/workflows/: build.yml
paw/: __init__.py  command_line.py  core.py  patterns.py  static.py  wgen.py  wordlist.py
paw/tests/: base.py  test_choose_algo.py  test_from_password.py  test_gen_hcat.py  test_gen_wordlist.py  test_parse_cset.py  test_save_wordlist.py  test_warnings.py
paw/tests/test_files/: gen_words_sample.txt  test_pw.txt
res/: sample.txt
test/: tests.py
test/test_files/: test_pw.txt  test_pw_all_std.txt
test_files/: gen_words_sample.txt
