[project]
name="paw"
version="1.2"
description="paw - patterns and wordlists in python"
readme = "README.md"
authors = [
    { name = "tehw0lf", email = "tehwolf@protonmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "mock>=5.1.0",
    "ruff>=0.8.4",
    "wlgen>=1.2",
]
[project.scripts]
paw = "paw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
