[project]
name="paw"
version="1.3.3"
description="paw - patterns and wordlists in python"
readme = "README.md"
authors = [
    { name = "tehw0lf", email = "tehwolf@protonmail.com" }
]
requires-python = ">=3.0"
dependencies = [
    "wlgen>=1.3.3",
]
[dependency-groups]
dev = [
  "mock"
]
lint = [
  "ruff"
]
[project.scripts]
paw = "paw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
