[project]
name="paw"
version="2.0.1"
description="paw - patterns and wordlists in python"
readme = "README.md"
authors = [
    { name = "tehw0lf", email = "tehwolf@protonmail.com" }
]
requires-python = ">=3.0"
dependencies = [
    "wlgen>=2.0.1",
]
[dependency-groups]
dev = [
  "mock"
]
lint = [
  "ruff"
]
[project.scripts]
paw = "paw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
